cluster/overlays/zahariev.com/plex/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: plex
spec:
  template:
    spec:
      containers:
      - name: plex
