cluster/overlays/zahariev.com/plex/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: plex
spec:
  rules:
  - host: plex.zahariev.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex
            port:
              number: 32400
  tls:
  - hosts:
    - plex.zahariev.com
    secretName: plex-tls
